<resources>
    <string name="app_name">BL BusTracker</string>

    <string name="options">Options</string>
    <string name="alarm">Alarm</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button" translatable="false">Cancel</string>
    <string name="storage_permission_title" translatable="false">Storage Permission</string>
    <string name="storage_permission_message" translatable="false">This application needs storage in order to work correctly</string>
    <string name="enable_gps_title" translatable="false">GPS is not enabled!</string>
    <string name="enable_gps_message" translatable="false">Do you want to turn on GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="provider_settings_message" translatable="false">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="provider_settings_yes">Yes</string>
    <string name="provider_settings_no">No</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="about" translatable="true">About</string>
    <string name="set_as_start_destination">Set As Start Destination</string>
    <string name="set_as_end_destination">Set As End Destination</string>
    <string name="open_google_navigation">Start Google Navigation</string>
    <!-- Preference Titles -->
    <string name="messages_header">Language</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="bus_routes">Bus routes</string>
    <string name="announcements">Announcements</string>
    <string name="map_view">Map View</string>
    <string name="nav_logo_header" translatable="false">logo header</string>
    <string name="select_language" translatable="true">Select language</string>
    <string name="select_map_type">Select map type</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="english" translatable="false">English</string>
    <string name="srpski" translatable="false">Srpski</string>
    <string name="srpski_cry" translatable="false">Српски</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="loading_message">Loading…</string>
    <string name="select_map_style">Select map style</string>

    <string name="contact">Contact</string>
    <string name="error_connecting">Connection error</string>
    <string name="announcement_content">Content:</string>
    <string name="no_busstop_found">No busStop found</string>
    <string name="unknown_busstop">unknown busStop</string>
    <string name="workday">Workday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday/Holiday</string>
    <string name="route_schedule">Route schedule</string>
    <string name="choose_your_route">Choose your route</string>
    <string name="enter_bus_route">Enter bus route</string>
    <string name="more_options">more options</string>
    <string name="search_your_route">Search your route</string>
    <string name="no_route_schedule">No route schedule</string>
    <string name="no_direct_route_msg">No direct route</string>
    <string name="report_problem">Report a problem</string>
    <string name="report_content">Report content</string>
    <string name="report_title">Report title</string>
    <string name="send_report">Send report</string>
    <string name="clear_content">Clear content</string>
    <string name="problem_reported">Problem reported!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="fill_required_fields">Please fill all required fields</string>
    <string name="no_internet">Message could not be sent. Please check your network connection and try again</string>
    <string name="about_paragraph_1">The application for the users of public transportation in the urban zone of Banja Luka.</string>
    <string name="about_paragraph_2" >Developed by the Faculty of Electrical Engineering University of Banja Luka and Autoprevoz company, under the "Future City Innovation Challenge" initiative, that is financially supported by the UNDP, the Ministry of Scientific and Technological Development, Higher Education and Information Society of the Republic of Srpska and the City of Banja Luka.</string>
    <string name="version">Version</string>
    <string name="undp_header" translatable="false">© 2020 UNDP.</string>
    <string name="playserveces_error" translatable="false">You can\'t make map requests</string>
    <string name="cannot_connect_to_internet" translatable="false">The server could not be found. Please try again after some time</string>
    <string name="server_not_found" translatable="false">The server could not be found. Please try again after some time</string>
    <string name="parsing_error" translatable="false">Parsing error! Please try again after some time!!</string>
    <string name="arrivals">Arrivals:</string>
    <string name="show_all_routes">Show all routes</string>
    <string name="show_all_button">Show all routes and busses on map</string>
    <string name="navigation_menu_tooltip">Show/Hide navigation menu</string>
    <string name="route">Route</string>
    <string name="minutes">min</string>
    <string name="no_busstop_time">Currently there are no times for this bus stop</string>
    <string name="reports">Report settings</string>
    <string name="send_crash_report">Send application crash report</string>
    <string name="collect_crash_reports">Collect crash reports</string>
    <string name="ask_to_send_report">You will be asked to send crash report to the server</string>
    <string name="wont_ask_to_send_report">You will not be asked to send crash report to the server</string>
    <string name="collect_crash_summary_on">Application will collect data about application crashes</string>
    <string name="collect_crash_summary_off">Application will not collect data about application crashes</string>
    <string name="report_sent">Crash report sent. Thank you!</string>
    <string name="no_internet_try_again">Current there is no internet connection. Please try again</string>
    <string name="next_departure_in">Departure from starting bus stop in</string>
    <string name="map_settings">Map settings</string>
    <string name="send_report_automatically">Send report automatically</string>
    <string name="no_google_maps_api">You dont have Google maps installed.</string>
    <string name="search_station">Search bus stop</string>
    <string name="start_busstop">Starting bus stop</string>
    <string name="end_busstop">Destination bus stop</string>
    <string name="arrival_in">in</string>
    <string name="from_starting">from depature</string>

</resources>
