<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view"
        >

    <group
            android:id="@+id/nav_group_one"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_map_view"
                android:icon="@drawable/ic_map_black"
                android:title="@string/map_view" />

        <item
                android:id="@+id/nav_announcements"
                android:icon="@drawable/ic_announcement_black"
                android:title="@string/announcements" />

        <item
                android:id="@+id/nav_route_schedule"
                android:icon="@drawable/ic_about_black"
                android:title="@string/route_schedule" />

    </group>

    <group
            android:id="@+id/nav_group_two"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings" />

        <item
                android:id="@+id/nav_report_problem"
                android:icon="@drawable/ic_report_problem"
                android:title="@string/report_problem" />

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_about"
                android:title="@string/about" />

    </group>


</menu>
