<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".navigationtabs.reportproblem.ReportProblemFragment">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <EditText
                android:id="@+id/report_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/report_title"
                android:layout_margin="8dp"
                android:imeOptions="actionNext"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/report_content_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@id/report_title"
                android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/report_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|start"
                    android:hint="@string/report_content"
                    android:imeOptions="actionDone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                    />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

            <Button
                    android:id="@+id/send_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/circle_shape_background"
                    android:text="@string/send_report"
                    android:layout_marginBottom="10dp"
                    />

            <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/circle_shape_background"
                    android:text="@string/clear_content"
                    />

        </LinearLayout>

    </LinearLayout>






</LinearLayout>