<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

    <!--            android:background="#2f333f"-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end">

            <TextView
                    android:id="@+id/x"
                    android:textColor="@color/black"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/circle_background"
                    android:gravity="center"
                    android:text="X"
                    android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

            <TextView
                    android:id="@+id/busstop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="TEST TEXT"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <Button
                    android:id="@+id/set_start_destination_btn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/circle_shape_background"
                    android:text="@string/set_as_start_destination"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/set_end_destination_btn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:background="@drawable/circle_shape_background"
                    android:text="@string/set_as_end_destination"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/start_navigation_btn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/circle_shape_background"
                    android:text="@string/open_google_navigation"
                    android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>


        <!--        x-->
        <!--        android:id="@+id/set_start_destination_btn"-->
        <!--        android:id="@+id/set_end_destination_btn"-->
        <!--        android:id="@+id/start_navigation_btn"-->

