<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent">

    <!--            android:background="#2f333f"-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginBottom="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end">

            <TextView
                    android:id="@+id/x"
                    android:textColor="@color/black"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/circle_background"
                    android:gravity="center"
                    android:text="X"
                    android:textStyle="bold" />
        </LinearLayout>

        <TextView
                android:id="@+id/busstop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                tools:text="TEST TEXT"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrivals"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/arrival_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    tools:listitem="@layout/item_arrival_time" />

            <TextView
                    android:id="@+id/empty_recyleview_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:text="@string/no_busstop_time" />

            <LinearLayout
                    android:id="@+id/button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/more_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/circle_shape_background"
                        android:text="@string/more_options"
                        android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.bottomnavigation.BottomNavigationView>