<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".navigationtabs.mapview.MapFragment">

    <LinearLayout
            android:id="@+id/linear_layout_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/search_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/google_blue"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:clipChildren="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">


            <FrameLayout
                    android:id="@+id/search_edit_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/google_blue"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >

                <AutoCompleteTextView
                        android:id="@+id/search_busstop_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:completionThreshold="1"
                        android:clipChildren="false"
                        android:gravity="center"
                        android:hint="@string/search_station"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_hint"
                        android:theme="@style/Autocomplete"

                        app:autoSizeMaxTextSize="32sp"
                        app:autoSizeMinTextSize="16sp"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />

                <Button
                        android:id="@+id/search_clear_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="invisible"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_close_white_24"
                        />
            </FrameLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/search_edit_frame"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    >

                <TextView
                        android:id="@+id/start_busstop_text"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:maxLines="2"
                        android:gravity="center"
                        android:ellipsize="end"
                        android:hint="@string/start_busstop"
                        android:textColorHint="@color/text_hint"
                        android:text=""
                        />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_arrow_white_24"
                        android:paddingStart="1dp"
                        android:paddingEnd="1dp"
                        />

                <TextView
                        android:id="@+id/end_busstop_text"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:ellipsize="end"
                        android:hint="@string/end_busstop"
                        android:textColorHint="@color/text_hint"
                        />
            </LinearLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map_container">

            <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapActivity" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/connection_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:clickable="false"
                    android:focusable="true"
                    android:visibility="gone"
                    app:fabCustomSize="@dimen/fab_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:maxImageSize="30dp"
                    app:srcCompat="@drawable/ic_no_internet_wifi"
                    android:backgroundTint="@color/gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_show_routes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="20dp"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_constraintBottom_toTopOf="@id/show_all_routes_busstops"
            app:layout_constraintRight_toRightOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_bus_white"

            />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/show_all_routes_busstops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_eye_24"

            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"

            app:fabCustomSize="@dimen/fab_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_zoom_out" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_zoom_in" />


</androidx.constraintlayout.widget.ConstraintLayout>